add and fixed tests

--- a/WebAppMagdalenaGorska/appsettings.json
+++ b/WebAppMagdalenaGorska/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "[Enter the domain of your tenant, e.g. contoso.onmicrosoft.com]",
+    "Instance": "Instance",
+    "Domain": "Domain",
     "ClientId": "ClientId",
     "TenantId": "TenantId",
     "CallbackPath": "/signin-oidc"
