added app insights

--- a/WebAppMagdalenaGorska/appsettings.json
+++ b/WebAppMagdalenaGorska/appsettings.json
@@ -19,5 +19,8 @@
     "PrimaryKey": "PrimaryKey",
     "DatabaseName": "DatabaseName",
     "ContainerName": "ContainerName"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "ConnectionString"
   }
 }
