get app insights value

--- a/WebAppMagdalenaGorska/appsettings.json
+++ b/WebAppMagdalenaGorska/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AzureAd": {
-    "Instance": "Instance",
-    "Domain": "Domain",
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "magdalenagorska.onmicrosoft.com",
     "ClientId": "ClientId",
     "TenantId": "TenantId",
     "CallbackPath": "/signin-oidc"
