--- a/WebAppMagdalenaGorska/WebAppMagdalenaGorska.csproj
+++ b/WebAppMagdalenaGorska/WebAppMagdalenaGorska.csproj
@@ -4,9 +4,11 @@
      <TargetFramework>netcoreapp3.1</TargetFramework>
     <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
     <UserSecretsId>0a38413c-083e-4e45-910f-0b8e6bdd3d5e</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/5a14cfca-7679-478e-a2df-45bf0737a50c/resourceGroups/AGHxRelativityProject/providers/microsoft.insights/components/magdalna-gorska-webapp</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.31.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.32">
